# doc_parse

./: .gitignore  README.md  app.py  diff_json.py  diff_markdown.py  llm_diff.py  main.py  parse_pdfs.py  pyproject.toml
diff/: changes.json  changes_geom.json  changes_summary.md  final_contract_changes.json
docs/plans/: 2026-04-20-llm-diff-design.md  2026-04-20-llm-diff-implementation.md
parsed/: 2024.md  2025.md
raw/: README.txt  download.sh
tests/: test_llm_diff.py
