[project]
name = "doc-parse"
version = "0.1.0"
description = "Parse Molloy University benefit PDFs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.0.0",
    "pymupdf>=1.27.2.2",
    "rich>=15.0.0",
    "streamlit>=1.56.0",
    "torch",
    "torchvision",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
